# reSsg

./: .dockerignore  Cargo.toml  Changes.md  Dockerfile  Readme.md
.github/workflows/: publish-devcontainer-image.yml  release.yml
example/: config.toml
example/sources/landing/: card.html  default-block.html  index.html  index.toml
example/sources/landing/blocks/: 1. about us.md  2. test.md  3. something else.html
example/sources/landing/blocks/cards/: 1. first.md  2. second.md
src/: config.rs  main.rs
src/server/: control.rs  mod.rs  watcher.rs
src/server/fileserver/: files.rs  livereload_injector.rs  mod.rs  named.rs  path_buf.rs
src/util/: error_mappers.rs  html.rs  md_parser.rs  mod.rs
vscode-extension/: .dockerignore  .gitignore  LICENSE.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
vscode-extension/back/: tsconfig.json
vscode-extension/back/src/: extension.ts  git-works.ts  server-watcher.ts  view.ts
vscode-extension/back/src/typings/: git.d.ts
vscode-extension/build-target/: extension.vsix
vscode-extension/front/: tsconfig.json
vscode-extension/front/src/: general.ts
vscode-extension/media/: general.css  vscode.css
vscode-extension/src/back/: extension.ts  git-works.ts  server-watcher.ts  tsconfig.json  view.ts
vscode-extension/src/common/: transport.mts
vscode-extension/src/front/: general.mts  tsconfig.json
