[package]
name = "reSsg"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive", "string"] }
toml = "0.9.10+spec-1.1.0"
sha1 = "0.11.0-rc.3"
hex = "0.4.3"
minijinja = { version = "2.14.0", features = ["loader", "deserialization"] }
anyhow = "1.0.100"
itertools = "0.14.0"
#markdown = "1.0.0"
actix-web = "4.12.1"
env_logger = "0.11.8"
futures = "0.3.31"
derive_more = "2.1.0"
percent-encoding = "2.3.2"
bitflags = "2.10.0"
mime_guess = "2.0.5"
rsfs = "0.4.1"
actix-service = "2.0.3"
futures-core = "0.3.31"
log = "0.4.29"
mime = "0.3.17"
actix-utils = "3.0.1"
markup5ever = "0.36.1"
notify-debouncer-full = "0.6.0"
notify = "8.2.0"
async-std = "1.13.2"
actix-ws = "0.3.0"
futures-util = "0.3.31"
flume = { version = "0.12.0", features = ["async"]}
html5ever = "0.36.1"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "22.0.0"
markup5ever_rcdom = "0.36.0+unofficial"
node-html-parser = "0.1.0"
kuchikikiki = "0.9.1"
url = "2.5.7"